--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,63 +1,80 @@
 $grey-lighten-5: #FAFAFA;
 
-.logo_text {
-    width: 250px;
-    height: 42px;
-
-    /* Logo */
-
-    font-family: 'Roboto Mono', sans-serif;
-    font-style: normal;
-    font-weight: 300;
-    font-size: 32px;
-    line-height: 42px;
-
-    /* Inside auto layout */
-
-    flex: none;
-    order: 0;
-    flex-grow: 0;
-}
-
-
 /* NAVBAR */
 
 .navbar_container {
+
+    .logo_container {
+
+        min-width: 200px;
+
+        .logo_text {
+            width: 250px;
+            height: 42px;
+
+            /* Logo */
+
+            font-family: 'Roboto Mono', sans-serif;
+            font-style: normal;
+            font-weight: 300;
+            font-size: 20px;
+            line-height: 42px;
+
+            /* Inside auto layout */
+
+            flex: none;
+            order: 0;
+            flex-grow: 0;
+        }
+
+
+    }
+
     display: flex;
     flex-direction: row;
     align-items: center;
     padding: 10px 20px;
-    gap: 249px;
-    height: 100px;
+    height: 70px;
     width: 100%;
     background-color: $grey-lighten-5;
     box-sizing: border-box;
-}
 
-.nav_links {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    padding: 0 20px;
-    margin: 0;
-    list-style: none;
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 36px;
-    /* identical to box height, or 257% */
 
-    letter-spacing: 1.25px;
-    text-transform: uppercase;
+    .navlink_container {
 
-    /* Inside auto layout */
+        width: 100%;
 
-    flex: none;
-    order: 1;
-    flex-grow: 0;
-    margin: 0px 0px;
+        .nav_links {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-evenly;
+            align-items: center;
+            width: 100%;
+            height: 100%;
+            padding: 0 20px;
+            margin: 0;
+            font-family: 'Roboto', sans-serif;
+            font-style: normal;
+            list-style: none;
+            font-weight: 500;
+            font-size: 14px;
+            line-height: 36px;
+            /* identical to box height, or 257% */
+
+            letter-spacing: 1.25px;
+            text-transform: uppercase;
+
+            /* Inside auto layout */
+
+            flex: none;
+            order: 1;
+            flex-grow: 0;
+            margin: 0px 0px;
+
+            a {
+                text-decoration: none;
+                color: #000;
+            }
+        }
+    }
 }
